--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,92 @@
 body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
   height: 100vh;
+  padding: 0;
+  margin: 0;
   background-image: url(../images/cristina-gottardi-wVTGdIGdojc-unsplash.jpg);
-  background-size: cover;
+  background-repeat: repeat;
+  background-size: 1500px;
+  padding-bottom: 58px;
 }
-div {
-  background-image: url(../images/logo.png);
-  height: 20px;
+
+/*global*/
+.container {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+}
+/* Resize images */
+.container img {
+  width: 60%;
+  height: auto;
+  opacity: 0, 5;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+header {
+  padding-top: 100px;
+  min-height: 100px;
+  border-bottom: #352a6e 0px solid;
+}
+
+header li {
+  margin: 10px;
+  padding: 15;
+  overflow: hidden;
+  float: left;
+}
+header ul {
+  float: left, top;
+  display: relative;
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  font-size: 14px;
+  padding: 16px;
+  text-align: center;
+  list-style-type: none;
+  word-spacing: 100%;
+}
+
+header button {
+  background-color: #352a6e;
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 16px;
+  margin: 4px 2px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 12px;
+}
+
+footer {
+  text-align: center;
+  height: 300px;
+  width: 100%;
+  min-height: calc(100vh - 211px - 58px);
+  padding: 30px, 20px;
+  position: absolute;
+  padding-bottom: 0px;
+}
+
+i {
+  size: 14px;
+  color: #352a6e;
+  float: right;
+  position: relative;
+  margin-left: 5;
+  padding: 16px;
+  padding-top: 50px;
 }
