--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,26 @@
-body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  line-height: 1.5;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
-  background-image: url(../images/cristina-gottardi-wVTGdIGdojc-unsplash.jpg);
-  background-repeat: repeat;
-  background-size: 1500px;
-  padding-bottom: 58px;
+header {
+  padding: 50px;
+  border-bottom: #352a6e 0px solid;
+  display: flex;
+}
+
+header li {
+  margin: 10px;
+  padding: 15;
+  overflow: hidden;
+  float: left;
+}
+header ul {
+  float: left, top;
+  display: relative;
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  font-size: 14px;
+  padding: 16px;
+  text-align: center;
+  list-style-type: none;
+  word-spacing: 100%;
 }
 
 /*global*/
@@ -31,32 +43,22 @@ body {
   width: 50%;
 }
 
-header {
-  padding-top: 100px;
-  min-height: 100px;
-  border-bottom: #352a6e 0px solid;
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+  min-height: 100%;
+  padding: 0;
+  margin: 0;
+  background-image: url(../images/cristina-gottardi-wVTGdIGdojc-unsplash.jpg);
+  background-repeat: repeat;
+  background-size: cover;
+  padding-bottom: 58px;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
-header li {
-  margin: 10px;
-  padding: 15;
-  overflow: hidden;
-  float: left;
-}
-header ul {
-  float: left, top;
-  display: relative;
-  position: absolute;
-  top: 8px;
-  left: 16px;
-  font-size: 14px;
-  padding: 16px;
-  text-align: center;
-  list-style-type: none;
-  word-spacing: 100%;
-}
-
-header button {
+.cta {
   background-color: #352a6e;
   border: none;
   color: white;
@@ -69,16 +71,7 @@ header button {
   margin-left: auto;
   margin-right: auto;
   border-radius: 12px;
-}
-
-footer {
-  text-align: center;
-  height: 300px;
-  width: 100%;
-  min-height: calc(100vh - 211px - 58px);
-  padding: 30px, 20px;
-  position: absolute;
-  padding-bottom: 0px;
+  width: 150px;
 }
 
 i {
@@ -87,6 +80,13 @@ i {
   float: right;
   position: relative;
   margin-left: 5;
-  padding: 16px;
-  padding-top: 50px;
+  padding: 6px;
+  display: grid;
+}
+
+footer {
+  text-align: center;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
