--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,7 @@ body {
   padding: 0;
   margin: 0;
   background-image: url(../images/cristina-gottardi-wVTGdIGdojc-unsplash.jpg);
+  background-position-x: center;
   background-repeat: repeat;
   background-size: cover;
   padding-bottom: 58px;
@@ -65,7 +66,6 @@ body {
   background-color: #352a6e;
   border: none;
   color: white;
-  padding: 10px;
   text-align: center;
   text-decoration: none;
   display: block;
@@ -87,39 +87,27 @@ i {
   display: grid;
 }
 
+@media (max-width: 320px) {
+  li {
+    padding-left: 0px;
+  }
+}
+
+i {
+  padding: 6px;
+  text-align: center;
+}
 footer {
   text-align: center;
   width: 100%;
   position: fixed;
   bottom: 0%;
 }
-
-@media (max-width: 320px) {
-  li {
-    padding-left: 20px;
-    padding-bottom: 0%;
-    padding-top: 170%;
-  }
-
-i {
-  padding-right: 0;
-
+body {
+  background-image: url("images/cristina-gottardi-wVTGdIGdojc-unsplash")
+    no-repeat;
 }
 
-.container {
-  width: 100%;
-  padding-bottom: 50%;
-  
-}
-  
-body{
-
-  background-image: url("images/cristina-gottardi-wVTGdIGdojc-unsplash") no-repeat;
-
-  }
-    
-    
-  
 footer {
   display: none !important;
 }
