--- a/css/jacket.css
+++ b/css/jacket.css
@@ -1,15 +1,12 @@
-/*index page*/
-
 header {
-  padding: 16px;
+  padding: 15px;
   border-bottom: #352a6e 0px solid;
   display: flex;
   float: right;
   padding-top: 0px;
   top: 8px;
-  left: 16px;
+  left: 50px;
   font-size: inherit;
-  position: center;
 }
 
 header li {
@@ -36,11 +33,13 @@ header ul {
   width: 80%;
   margin: auto;
   overflow: hidden;
+  position: relative;
 }
 /* Resize images */
 .container img {
   width: 60%;
   height: auto;
+  opacity: 0, 5;
   display: center;
 }
 
@@ -60,7 +59,6 @@ body {
   min-height: 100%;
   padding: 0;
   margin: 0;
-  background-image: url(../images/cristina-gottardi-wVTGdIGdojc-unsplash.jpg);
   background-position-x: center;
   background-repeat: repeat;
   background-size: cover;
@@ -68,21 +66,7 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   padding-top: 1%;
-}
-
-.cta {
-  background-color: #352a6e;
-  border: none;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: block;
-  font-size: 16px;
-  margin: 4px 2px;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 12px;
-  width: 150px;
+  background-color: #98a04f;
 }
 
 i {
@@ -93,10 +77,15 @@ i {
   padding: 6px;
   display: grid;
   padding-top: 0%;
+  padding-right: 0px;
+  height: 50px;
+  width: auto;
 }
 
 main {
-  position: relative;
+  position: absolute;
+  padding-top: 200px;
+  padding-left: 100px;
 }
 
 .footer {
@@ -106,38 +95,52 @@ main {
   bottom: 0%;
 }
 
-/*about page*/
-
-.box2 {
-  background-color: aliceblue;
-  height: 200px;
-  width: 300px;
-  padding-left: 0px;
-  text-align: left;
-  padding-top: 20px;
-  display: flow-root;
-}
-
-form {
-  border: 3px solid #352a6e;
-  width: 600px;
-  height: 300px;
-  background-color: aliceblue;
-  font: 12px;
-  padding-top: 0px;
-}
-
-button {
-  background-color: #352a6e;
-  border: none;
-  color: white;
-  text-align: center;
-  text-decoration: none;
+.center {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  display: center;
+  padding-top: 30px;
+}
+
+/*global*/
+.container {
+  width: 50%;
+  margin: auto;
+  overflow: hidden;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+/* Resize images */
+.container img {
+  width: 20%;
+  display: center;
+  padding-top: 0px;
+  border-top: 0px;
+  padding-bottom: 0px;
+}
+#boxes {
+  margin-top: 30px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+}
+#boxes .box {
+  text-align: center;
+  width: 30%;
+  padding: 10px;
+  float: left;
+  display: flex;
+}
+
+.cta {
   font-size: 16px;
   margin: 4px 2px;
-  margin-left: 400px;
-  margin-right: 50px;
   border-radius: 12px;
-  width: 150px;
+  width: 500px;
+  height: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  display: flex;
 }
