--- a/css/jacket.css
+++ b/css/jacket.css
@@ -144,3 +144,31 @@ main {
   text-align: left;
   display: flex;
 }
+
+@media only screen and (max-device-width: 480px) {
+  div#wrapper {
+    width: 400px;
+  }
+
+  #header {
+    height: 93px;
+    position: relative;
+    display: flex;
+  }
+  .container {
+    padding-top: 100px;
+    padding-left: 50px;
+  }
+  #content {
+    float: none;
+    width: 100%;
+  }
+  #i {
+    size: 2px;
+    display: flex;
+  }
+  #navigation {
+    float: none;
+    width: auto;
+  }
+}
