--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ a {
 }
 p {
   color: #352a6e;
+  margin-top: 15px;
 }
 .container {
   max-width: 1300px;
@@ -80,7 +81,9 @@ p {
   width: 500px;
   height: 400px;
 }
-
+.col-2{
+  padding-left: 25px;
+}
 .categories {
   margin: 70px 0;
 }
@@ -92,12 +95,7 @@ p {
 .col-b img {
   width: 100%;
 }
-.small-container {
-  max-width: 1080px;
-  margin: auto;
-  padding-left: 25px;
-  padding-right: 25px;
-}
+
 .col-c {
   flex-basis: 25%;
   padding: 10px;
@@ -105,6 +103,7 @@ p {
   margin-bottom: 50px;
   transition: transform 0.5s;
 }
+
 .col-c img {
   width: 100%;
 }
@@ -128,6 +127,7 @@ p {
 }
 h4 {
   font-weight: bold;
+  color:#352a6e;
 }
 .col-c p {
   font-size: 14px;
@@ -223,6 +223,7 @@ select:focus {
   text-align: center;
   line-height: 40px;
   cursor: pointer;
+  margin-top: 40px;
 }
 .check-out .btn {
   margin-left: 80%;
@@ -455,6 +456,28 @@ h6:before {
 h6.zero:before {
   opacity: 1;
 }
+.products{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.product{
+  padding: 10px;
+}
+.product img{
+  width: 30%;
+  padding-top: 15px;
+}
+.details-price{
+  font-size: 40 bold;
+  padding-top: 20px;
+}
+.small-container{
+  padding-left: 25px;
+  padding-right: 25px;
+
+}
+
+
 
 @keyframes first {
   to {
